@@ -71,7 +71,7 @@ enum
     AVRTEST_tan, AVRTEST_atan, AVRTEST_tanh, AVRTEST_atanh,
     AVRTEST_sqrt, AVRTEST_cbrt, AVRTEST_exp, AVRTEST_log,
     AVRTEST_trunc, AVRTEST_ceil, AVRTEST_floor, AVRTEST_round,
-    AVRTEST_log2, AVRTEST_fabs,
+    AVRTEST_log2, AVRTEST_log10, AVRTEST_fabs,
     AVRTEST_EMUL_2args,
     AVRTEST_pow = AVRTEST_EMUL_2args,
     AVRTEST_atan2, AVRTEST_hypot,
@@ -663,7 +663,7 @@ AVRTEST_DEFF(cos) AVRTEST_DEFF(acos) AVRTEST_DEFF(cosh) AVRTEST_DEFF(acosh)
 AVRTEST_DEFF(tan) AVRTEST_DEFF(atan) AVRTEST_DEFF(tanh) AVRTEST_DEFF(atanh)
 AVRTEST_DEFF(exp) AVRTEST_DEFF(log)  AVRTEST_DEFF(sqrt) AVRTEST_DEFF(cbrt)
 AVRTEST_DEFF(trunc) AVRTEST_DEFF(ceil)  AVRTEST_DEFF(floor) AVRTEST_DEFF(round)
-AVRTEST_DEFF(log2) AVRTEST_DEFF(fabs)
+AVRTEST_DEFF(log2) AVRTEST_DEFF(log10) AVRTEST_DEFF(fabs)
 #undef AVRTEST_DEFF
 
 #define AVRTEST_DEFF(ID)                                \
@@ -704,7 +704,7 @@ AVRTEST_DEFF(cos) AVRTEST_DEFF(acos) AVRTEST_DEFF(cosh) AVRTEST_DEFF(acosh)
 AVRTEST_DEFF(tan) AVRTEST_DEFF(atan) AVRTEST_DEFF(tanh) AVRTEST_DEFF(atanh)
 AVRTEST_DEFF(exp) AVRTEST_DEFF(log)  AVRTEST_DEFF(sqrt) AVRTEST_DEFF(cbrt)
 AVRTEST_DEFF(trunc) AVRTEST_DEFF(ceil)  AVRTEST_DEFF(floor) AVRTEST_DEFF(round)
-AVRTEST_DEFF(log2) AVRTEST_DEFF(fabs)
+AVRTEST_DEFF(log2) AVRTEST_DEFF(log10) AVRTEST_DEFF(fabs)
 #undef AVRTEST_DEFF
 
 #define AVRTEST_DEFF(ID)                                                \
@@ -745,7 +745,7 @@ AVRTEST_DEFF(cos) AVRTEST_DEFF(acos) AVRTEST_DEFF(cosh) AVRTEST_DEFF(acosh)
 AVRTEST_DEFF(tan) AVRTEST_DEFF(atan) AVRTEST_DEFF(tanh) AVRTEST_DEFF(atanh)
 AVRTEST_DEFF(exp) AVRTEST_DEFF(log)  AVRTEST_DEFF(sqrt) AVRTEST_DEFF(cbrt)
 AVRTEST_DEFF(trunc) AVRTEST_DEFF(ceil)  AVRTEST_DEFF(floor) AVRTEST_DEFF(round)
-AVRTEST_DEFF(log2) AVRTEST_DEFF(fabs)
+AVRTEST_DEFF(log2) AVRTEST_DEFF(log10) AVRTEST_DEFF(fabs)
 #undef AVRTEST_DEFF
 
 #define AVRTEST_DEFF(ID)                                \
@@ -788,6 +788,7 @@ avrtest_ldexpl (long double _x, int _y)
 #define avrtest_floorl avrtest_floorf
 #define avrtest_roundl avrtest_roundf
 #define avrtest_log2l  avrtest_log2f
+#define avrtest_log10l avrtest_log10f
 #define avrtest_fabsl  avrtest_fabsf
 
 #define avrtest_powl   avrtest_powf
