@@ -3,6 +3,8 @@
                           avrtest NEWS
                           ============
 
+* Support avrtest_log10f() and avrtest_log10l().                 2025-05-16
+
 * Support -log=FILE for the LOG_XXX commands.                    2025-04-15
 
 * Support -stdout=FILE, -stderr=FILE and -stdin=FILE.            2025-04-15
